﻿v8.9
-----
: Fixed a bug where agegate pages would throw an error rather than correctly entering a date
: Fixed an issue with surprise logos not displaying correctly
: Fixed a bug with recommendations highlights on storefront
: Fixed a bug where invalid dynamic store data would be cached incorrectly
: Fixed a bug that caused items with quotes in their names to not show correct buttons in inventory
: Fixed a bug that displayed an incorrect wishlist total if some items were not yet available
: Fixed a bug where some home page elements weren't highlighted correctly


v8.8
-----
+ Added a version update dialog box to display a change log to the user when the extension is updated
+ The feature to automatically send age verification now works with new tag-based verification pages
+ Hovering over the red exclamation mark when a data request fails will show details of that request
+ The Enhanced Steam options can now be accessed directly from the Firefox about:addons page
+ Added an option to enable or disable displaying the game's purchase date on store pages
+ Added SteamRepCN links to user profiles when browsing in Chinese
+ Added Chinese name to game store page when browsing in Chinese
+ Added an option to see Keylol links and user ratings when browsing in Chinese
+ Added SteamCN language mods to the "Languages" section of store pages when browsing in Chinese
: Fixed a bug that caused Firefox features not to load after clearing Enhanced Steam's cache
: Fixed a bug that caused Enhanced Steam in Firefox not to function on steamcommunity.com pages
: Fixed a rendering issue in Firefox where the options screen would show a white background
: Fixed a bug where regional price comparison icons would not display in Firefox
: Fixed a bug where Firefox would throw a "Not well formed" error when loading localization files
: Fixed a bug that caused card drop count calculations to be incorrect under certain circumstances

v8.7.2
-----