@@ -1,5 +1,6 @@
 ﻿v8.9
 -----
++ Added sorting options to the "my sell listing" section of the market home page
 : Fixed a bug where agegate pages would throw an error rather than correctly entering a date
 : Fixed an issue with surprise logos not displaying correctly
 : Fixed a bug with recommendations highlights on storefront
